fix double scroll bar

--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@ body {
   background-color: var(--dark-color);
   font-size: 18px;
   line-height: 1.5rem;
+  overflow: hidden;
 }
 
 a {
